# neorg-dirman

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  ffi.lua
.github/workflows/: valgrind.yml
src/: bindings.h  c_functions.rs  lib.rs  workspace.rs  workspace_traverse.rs
test/example_workspace/: file1.norg  file2.norg
