[package]
name = "neorg-directory-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release_nostrip]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
debug = false
strip=false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = false
strip=true
