[package]
name = "neorg-dirman"
description = "A cross-platform implementation of Dirman in Rust."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
license_file = "LICENSE"
repository = "https://github.com/nvim-neorg/neorg-dirman"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release_nostrip]
inherits = "release"
opt-level = "s"
lto = "thin"
debug = false
strip = false

[profile.release]
opt-level = "s"
lto = true
debug = false
strip = true
